k8s/api-gateway.yaml
# api-gateway Deployment and Service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: vramana98/api-gateway:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4004
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: microservices
spec:
  selector:
    app: api-gateway
  ports:
    - port: 4004
      targetPort: 4004
  type: ClusterIP
