k8s/billing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: billing-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: billing-service
  template:
    metadata:
      labels:
        app: billing-service
    spec:
      containers:
        - name: billing-service
          image: billing-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9001
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: billing-service
  namespace: microservices
spec:
  selector:
    app: billing-service
  ports:
    - name: grpc
      port: 9001
      targetPort: 9001
    - name: http
      port: 4001
      targetPort: 4001
  type: ClusterIP
