k8s/infra-databases.yaml
# Postgres Databases for auth-service and patient-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-db
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service-db
  template:
    metadata:
      labels:
        app: auth-service-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-db
  namespace: microservices
spec:
  selector:
    app: auth-service-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service-db
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service-db
  template:
    metadata:
      labels:
        app: patient-service-db
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service-db
  namespace: microservices
spec:
  selector:
    app: patient-service-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
