k8s/infra-kafka.yaml
# Kafka (KRaft mode) Deployment and Service

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
            - containerPort: 9093
            - containerPort: 9094
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: microservices
spec:
  selector:
    app: kafka
  ports:
    - name: kafka-internal
      port: 9092
      targetPort: 9092
    - name: kafka-controller
      port: 9093
      targetPort: 9093
    - name: kafka-external
      port: 9094
      targetPort: 9094
  type: ClusterIP
