k8s/patient-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: patient-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: patient-service
  namespace: microservices
spec:
  selector:
    app: patient-service
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
