k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: microservices.local
      http:
        paths:
          - path: /pgadmin
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4004

          - path: /patient
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4004
